# hed-metadata-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  integration-tests.yaml  mdformat.yaml
.status/: setup_toolkit.py
config/: citation_skip_list.txt
src/hed_metadata_toolkit/: __init__.py  cache.py  citation_identity.py  citation_normalize.py
src/hed_metadata_toolkit/citations/: __init__.py  apply_manual_fills.py  assign_citation_ids.py  collect_citations.py  convert_pdfs.py  enrich_pub_ids.py  generate_review_queue.py
src/hed_metadata_toolkit/clients/: __init__.py  crossref.py  europepmc.py  openalex.py  osf.py  pmc.py  semanticscholar.py  unpaywall.py
src/hed_metadata_toolkit/dataset_summary/: __init__.py  extract_readme_summaries.py  extract_summary_info.py  sort_datasets.py  update_summary.py
src/hed_metadata_toolkit/github/: __init__.py  bids_tree.py  fetch_repo_list.py  list_event_files.py  sync_local_files.py  sync_repo_contents.py  sync_repo_file_contents.py
src/hed_metadata_toolkit/github_org/: fetch_repo_list.py  sync_local_files.py  sync_repo_contents.py  sync_repo_file_contents.py
tests/: test_apply_manual_fills.py  test_apply_manual_fills_atomic.py  test_assign_citation_ids.py  test_bids_tree.py  test_cache.py  test_citation_identity.py  test_citation_identity_pinned.py  test_citation_normalize.py  test_cli_entry_points.py  test_cli_path_defaults.py  test_clients_drift.py  test_collect_citations.py  test_consumers_schema.py  test_doi_canon.py  test_enrich_pub_ids.py  test_extract_readme_summaries.py  test_extract_summary_nemar.py  test_fetch_repo_list.py  test_generate_review_queue.py  test_list_event_files.py  test_osf_client.py  test_pmc_client.py  test_sync_local_files.py  test_sync_local_files_org.py  test_sync_repo_contents.py  test_sync_repo_contents_subdir.py  test_sync_repo_file_contents.py  test_url_synthesisers.py
tests/fixtures/crossref/: 10.1038_s41597-022-01407-x.json
tests/fixtures/europepmc/: pmid_35722095.json
tests/fixtures/openalex/: 10.1016_j.neuroimage.2021.118411.json
tests/fixtures/osf/: files_abc123.json  nodes_8pg7x.json  nodes_bxvhr.json  preprints_j5v9b.json
tests/integration/: README.md  __init__.py  conftest.py  test_github_fetch_integration.py
