[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hed-metadata-toolkit"
version = "0.1.0"
description = "Shared toolkit for HED metadata repos: cache, API clients, citation identity, GitHub-org pipelines."
authors = [
    { name = "HED Group", email = "hedannotation@gmail.com" },
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
# PDF -> Markdown conversion (hed-convert-pdfs). Heavy; opt-in only.
pdf = [
    "marker-pdf",
]
test = [
    "pytest>=8.0.0",
]
docs = [
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mdformat>=0.7.0",
    "mdformat-myst>=0.1.5",
]

[project.scripts]
# Pipeline steps, exposed as console commands so consumer repos
# (openneuro-metadata, task-research, nemar-metadata) invoke the shared
# implementation directly instead of vendoring wrapper scripts.
# GitHub-org pipeline
hed-fetch-repo-list        = "hed_metadata_toolkit.github.fetch_repo_list:main"
hed-sync-repo-contents     = "hed_metadata_toolkit.github.sync_repo_contents:main"
hed-sync-local-files       = "hed_metadata_toolkit.github.sync_local_files:main"
hed-sync-repo-file-contents = "hed_metadata_toolkit.github.sync_repo_file_contents:main"
# Dataset-summary builders
hed-extract-summary-info   = "hed_metadata_toolkit.dataset_summary.extract_summary_info:main"
hed-update-summary         = "hed_metadata_toolkit.dataset_summary.update_summary:main"
hed-sort-datasets          = "hed_metadata_toolkit.dataset_summary.sort_datasets:main"
# Citation pipeline
hed-collect-citations      = "hed_metadata_toolkit.citations.collect_citations:main"
hed-assign-citation-ids    = "hed_metadata_toolkit.citations.assign_citation_ids:main"
hed-generate-review-queue  = "hed_metadata_toolkit.citations.generate_review_queue:main"
hed-apply-manual-fills     = "hed_metadata_toolkit.citations.apply_manual_fills:main"
hed-enrich-pub-ids         = "hed_metadata_toolkit.citations.enrich_pub_ids:main"
hed-convert-pdfs           = "hed_metadata_toolkit.citations.convert_pdfs:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
# Enable flake8-style checks plus additional rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "N802",   # Function name should be lowercase (many test methods use camelCase)
    "N803",   # Argument name should be lowercase (DataFrame df is common)
    "N806",   # Variable in function should be lowercase (common in scientific code)
    # Style rules that are too opinionated
    "SIM108", # if-else-block-instead-of-if-exp (ternary operator preference)
    "SIM105", # suppressible-exception (use contextlib.suppress)
    "SIM118", # in-dict-keys (x in dict vs x in dict.keys())
    "SIM102", # collapsible-if (nested if statements)
    "SIM103", # needless-bool (return bool vs if/else return True/False)
    "SIM110", # reimplemented-builtin (any/all reimplementation)
    "SIM101", # duplicate-isinstance-call
    # Python 3.10+ features
    "UP007",  # Use X | Y for Union types (requires 3.10+)
    "UP008",  # Use super() without parameters (we're okay with explicit)
    "UP031",  # Use format strings over %-formatting (legacy code compatibility)
    "UP028",  # yield in for loop
    "UP045",  # Use X | None for Optional (requires 3.10+)
]

# Allow unused imports in __init__.py files
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# Maximum complexity (matching your flake8 setting)
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["hed"]

[tool.ruff.format]
# Ruff format settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# Pytest configuration
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
# --integration flag is defined in tests/integration/conftest.py

